--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "pinia": "2.0.33",
     "pinia-auto-refs": "0.0.6",
     "pinia-plugin-persist-uni": "1.2.0",
+    "vant": "^4.7.1",
     "vue": "3.2.47"
   },
   "devDependencies": {
@@ -71,6 +72,8 @@
     "@dcloudio/uni-cli-shared": "3.0.0-3070320230222002",
     "@dcloudio/uni-stacktracey": "3.0.0-3070320230222002",
     "@dcloudio/vite-plugin-uni": "3.0.0-3070320230222002",
+    "@vant/auto-import-resolver": "^1.0.1",
+    "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-typescript": "11.0.2",
     "@vue/tsconfig": "0.1.3",
     "auto-import-types": "0.0.4",
